kcms/colors: Show last-used custom accent color when clicking custom color checkbox

Right now it opens the color picker dialog with the current first accent color.
Remembering the user's prior custom accent color (if any) is nicer.

BUG: 455894
FIXED-IN: 5.26